create mixins and functions

--- a/src/components/layout/Header/Header.scss
+++ b/src/components/layout/Header/Header.scss
@@ -1,3 +1,11 @@
+@import '@styles/includes/mixins';
+
 header {
-	position: relative;
+	padding-inline: var(--spacing-4);
+	padding-block: var(--spacing-5);
+
+	h1 {
+		font-size: 28rem;
+		font-weight: 400;
+	}
 }
