--- a/src/styles/includes/reset.scss
+++ b/src/styles/includes/reset.scss
@@ -40,6 +40,14 @@ ul {
 	list-style: none;
 }
 
+button {
+	border: none;
+	padding: 0;
+	background: none;
+	color: inherit;
+	font-size: inherit;
+}
+
 button,
 input,
 select {
