--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
-@import './includes/variables.scss';
-@import './includes/reset.scss';
-@import './includes/base.scss';
+@import './variables';
+@import './mixins';
+@import './reset';
+@import './base';
