fix background image import

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -19,7 +19,7 @@ body {
 		position: absolute;
 		inset-inline: 0;
 		height: 100vh;
-		background-image: url('images/background.jpg');
+		background-image: url('/images/background.jpg');
 		background-attachment: fixed;
 		background-position: center center;
 		background-size: cover;
