--- a/src/components/layout/Navbar/Navbar.scss
+++ b/src/components/layout/Navbar/Navbar.scss
@@ -7,9 +7,8 @@ nav {
 	justify-content: space-evenly;
 	align-items: center;
 	border-top: 1rem solid $main-color;
+	background-color: rgba($alt-color, 0.5);
 	box-shadow: 0 0 50rem rgba($black, 0.75);
-	backdrop-filter: blur(10px);
-	-webkit-backdrop-filter: blur(10px);
 
 	button {
 		opacity: 0.5;
