--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -39,12 +39,20 @@ ul {
 	list-style: none;
 }
 
+a,
+a:hover,
+a:visited {
+	color: inherit;
+	text-decoration: none;
+}
+
 button {
 	border: none;
 	padding: 0;
 	background: none;
 	color: inherit;
 	font-size: inherit;
+	cursor: pointer;
 }
 
 button,
