--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,5 +1,5 @@
 $main-color: #e4887e;
-$alt-color: #696a8b;
+$alt-color: #3b3b5f;
 $text-color: #ffffff;
 
 $main-color-light: ligthen($main-color, 10);
