--- a/src/components/layout/Header/Header.scss
+++ b/src/components/layout/Header/Header.scss
@@ -1,11 +1,20 @@
 header {
-	padding: $spacing-8 $spacing-4;
-	border-bottom: 1rem solid rgba($black, 0.25);
+	position: sticky;
+	top: 0;
+	padding: $spacing-6 $spacing-4;
+	background-color: rgba($alt-color, 0.5);
+	box-shadow: 0 0 50rem rgba($black, 0.75);
+	@include backgroundBlur(7rem);
 	display: flex;
 }
 
 @include on-desktop() {
 	header {
+		position: static;
 		padding: $spacing-8;
+		background-color: transparent;
+		box-shadow: none;
+		@include backgroundBlur(0rem);
+		border-bottom: 1rem solid rgba($white, 0.25);
 	}
 }
