--- a/src/components/common/Media/Vinyl/Vinyl.scss
+++ b/src/components/common/Media/Vinyl/Vinyl.scss
@@ -1,11 +1,10 @@
 article {
 	display: flex;
 	flex-direction: column;
-	gap: $spacing-1;
 	position: relative;
-	font-size: 16rem;
 	width: fit-content;
 	text-align: center;
+	transition: transition(padding-right);
 
 	@mixin background($image) {
 		background-image: $image;
@@ -14,12 +13,31 @@ article {
 		background-repeat: no-repeat;
 	}
 
-	&.open {
+	&.size-xs {
+		font-size: 8rem;
+	}
+	&.size-s {
+		font-size: 12rem;
+	}
+	&.size-m {
+		font-size: 16rem;
+	}
+	&.size-l {
+		font-size: 20rem;
+	}
+	&.size-xl {
+		font-size: 24rem;
+	}
+	&.size-xxl {
+		font-size: 28rem;
+	}
+
+	&.full-open {
 		padding-right: 8em;
 	}
 
 	&.barely-open {
-		padding-right: 4em;
+		padding-right: 3em;
 	}
 
 	&.half-open {
@@ -59,5 +77,14 @@ article {
 			@include background(var(--cover-image));
 			filter: brightness(0.75) grayscale(0.25);
 		}
+	}
+
+	strong {
+		font-size: max(14rem, 0.9em);
+		@include maxLines(1);
+	}
+	span {
+		font-size: max(14rem, 0.85em);
+		@include maxLines(1);
 	}
 }
