--- a/src/components/layout/Navbar/Navbar.scss
+++ b/src/components/layout/Navbar/Navbar.scss
@@ -10,6 +10,7 @@ nav {
 	align-items: center;
 	background-color: rgba($alt-color, 0.5);
 	box-shadow: 0 0 50rem rgba($black, 0.75);
+	z-index: 1;
 	@include backgroundBlur(7rem);
 
 	a {
