--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -62,6 +62,10 @@ main {
 }
 
 .container {
-	max-width: calc(100% - $spacing-8 * 2);
+	max-width: calc(100% - $spacing-4 * 2);
 	margin-inline: auto;
+
+	@include over-mobile() {
+		max-width: calc(100% - $spacing-8 * 2);
+	}
 }
