--- a/src/components/common/Media/Book/Book.scss
+++ b/src/components/common/Media/Book/Book.scss
@@ -5,7 +5,6 @@ article {
 	width: fit-content;
 	max-width: min-content;
 	text-align: center;
-	transition: transition(padding-right);
 
 	@mixin background($image) {
 		background-image: $image;
@@ -33,18 +32,6 @@ article {
 		font-size: 28rem;
 	}
 
-	&.full-open {
-		padding-right: 8em;
-	}
-
-	&.barely-open {
-		padding-right: 3em;
-	}
-
-	&.half-open {
-		padding-right: 5.75em;
-	}
-
 	.cover {
 		height: 12em;
 		aspect-ratio: var(--cover-ratio);
@@ -53,37 +40,14 @@ article {
 		box-shadow: 0 0.75em 5rem -5rem rgba($black, 0.35);
 		margin-bottom: $spacing-4;
 		@include background(var(--cover-image));
-
-		&::after {
-			content: '';
-			position: absolute;
-			right: 0;
-			top: 0.25em;
-			height: 11.5em;
-			aspect-ratio: 1;
-			z-index: -2;
-			@include background(url('./disk.png'));
-		}
-
-		&::before {
-			content: '';
-			position: absolute;
-			right: 0;
-			top: 3.625em;
-			right: 3.35em;
-			height: 4.75em;
-			aspect-ratio: 1;
-			z-index: -1;
-			border-radius: 100%;
-			@include background(var(--cover-image));
-			filter: brightness(0.75) grayscale(0.25);
-		}
+		position: relative;
 	}
 
 	strong {
 		font-size: max(14rem, 0.9em);
 		@include maxLines(1);
 	}
+
 	span {
 		font-size: max(14rem, 0.85em);
 		@include maxLines(1);
