--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -23,3 +23,6 @@ $grey-700: #b3b3b3;
 $grey-800: #cccccc;
 $grey-900: #e6e6e6;
 $white: #ffffff;
+
+$danger-color: #b62837;
+$success-color: #67bf67;
