init form controls

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,10 +14,11 @@ html {
 	*::before,
 	*::after {
 		box-sizing: border-box;
+
 		&:focus,
 		&:focus-visible,
 		&:focus-within {
-			outline: 2rem solid $alt-color !important;
+			outline: 2rem solid $main-color !important;
 		}
 	}
 }
